# parallel-algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: bench_qsort.cpp  bench_qsort_par.cpp  bench_qsort_seq.cpp
benchmarks/bfs/: bench_bfs.cpp  bench_bfs.h  bench_bfs_par.cpp  bench_bfs_seq.cpp
benchmarks/qsort/: bench_qsort.cpp  bench_qsort.h  bench_qsort_par.cpp  bench_qsort_seq.cpp
src/: qsort_par.cpp  qsort_seq.cpp
src/bfs/: bfs_par.cpp  bfs_par.h  bfs_seq.cpp  bfs_seq.h
src/headers/: qsort_par.h  qsort_seq.h
src/qsort/: qsort_par.cpp  qsort_seq.cpp
tests/: bfs_test.cpp  qsort_test.cpp
